Space station (#227)
Co-authored-by: nutant <65939836+nutant233@users.noreply.github.com>